fixed issues with color mode in global.css file to ensure that the webpage works both in light and dark mode

--- a/kidspiration/src/app/globals.css
+++ b/kidspiration/src/app/globals.css
@@ -1,20 +1,33 @@
-@tailwind base; tailwind components;
+@tailwind base;
+
+@tailwind components;
+
 @tailwind utilities;
 
+
+
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+
+--foreground-rgb: 0, 300, 0;
+
+ --background-start-rgb: 235, 240, 255;
+
+ --background-end-rgb: 200, 255, 200;
+
 }
+
+
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
 
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+ :root {
+
+ --foreground-rgb: 255, 255, 255;
+
+ --background-start-rgb: 0, 0, 0;
+
+ --background-end-rgb: 0, 0, 0;
+
+ }
+
 }
